--- a/css/main.css
+++ b/css/main.css
@@ -793,10 +793,19 @@ body {
   font-weight: 300;
   line-height: 1.2;
   color: #353434; }
+  @media (max-width: 768px) {
+    body {
+      font-size: 14px; } }
 
 a {
   color: inherit;
   text-decoration: none; }
+
+::selection {
+  background: #ffae00; }
+
+::-moz-selection {
+  background: #ffae00; }
 
 .btn {
   display: inline-block;
@@ -887,7 +896,10 @@ button::-moz-focus-inner {
   margin-right: 30px;
   width: 188px;
   height: auto;
-  display: block; }
+  display: block;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
   @media (max-width: 1024px) {
     .top-logo {
       width: 130px; } }
@@ -901,7 +913,10 @@ button::-moz-focus-inner {
   max-width: 500px;
   -webkit-flex-shrink: 1;
   -ms-flex-negative: 1;
-  flex-shrink: 1; }
+  flex-shrink: 1;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
   @media (max-width: 768px) {
     .top-nav {
       display: none; } }
@@ -984,11 +999,15 @@ button::-moz-focus-inner {
 .screen {
   position: relative;
   width: 100%;
-  border: 2px solid white;
+  border: 2px solid rgba(255, 255, 255, 0.7);
   border-radius: 8%/11%;
   padding: 5.4% 5%;
   overflow: hidden;
-  margin-bottom: -5.7%; }
+  margin-bottom: -5.7%;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  pointer-events: none; }
   .screen__img {
     display: block;
     width: 100%;
