--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -4,9 +4,20 @@ body{
 	font-weight: 300;
 	line-height: 1.2;
 	color: #353434;
+	@include res(m){
+		font-size: 14px;
+	}
 }
 
 a{
 	color: inherit;
 	text-decoration: none;
+}
+
+::selection {
+	background: $yellow;
+}
+
+::-moz-selection {
+	background: $yellow;
 }
