--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -17,4 +17,7 @@ $font: 'Roboto', 'Helvetica Neue', Arial, sans-serif;
 $container_width: 1228px;
 
 $yellow: #ffae00;
+$violet: #444b99;
+$white: #fefefe;
+$bg-color: #f6f6fd;
 $gradient: linear-gradient( to right, rgb(29,34,74) 0%, rgb(44,52,133) 100%);
