--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -2,12 +2,12 @@
 	display: inline-block;
 	vertical-align: top;
 	position: relative;
-	padding: 14px 20px 12px 20px;
+	padding: 13px 25px;
 	font-size: 16px;
 	font-weight: bold;
 	font-family: $font;
 	line-height: 1.3;
-	color: #FFF;
+	color: $white;
 	text-decoration: none;
 	text-transform: uppercase;
 	text-align: center;
@@ -20,7 +20,7 @@
 	border-radius: 40px;
 	transform: translate3d(0,0,0);
 	@include res(xs){
-		padding: 12px 20px 10px 20px;
+		padding: 11px 20px;
 		font-size: 14px;
 	}
 
@@ -35,6 +35,13 @@
 		background-color: darken($yellow,5%);
 		transform: translate3d(0,0,0);
 		box-shadow: 0 2px 5px 0 rgba(0,0,0,0);
+	}
+
+	.i-hare{
+		font-size: 19px;
+		position: relative;
+		top: 2px;
+		margin-left: 7px;
 	}
 }
 
