--- a/sass/_modals.scss
+++ b/sass/_modals.scss
@@ -1,9 +1,96 @@
 .modal{
 	display: none;
-	width: 500px;
+	width: 765px;
 	max-width: 100%;
-	will-change: transform,opacity;
 	overflow: visible !important;
+	padding: 0;
+	font-family: $font;
+	@include res(s){
+		width: 500px;
+	}
+
+	&__wrap{
+		display: flex;
+	}
+
+	&__thumb{
+		width: 284px;
+		flex-shrink: 0;
+		@include res(m){
+			width: 35%;
+		}
+		@include res(s){
+			display: none;
+		}
+		img{
+			width: 100%;
+			height: auto;
+			display: block;
+		}
+	}
+
+	&__content{
+		padding: 40px 30px;
+		@include res(m){
+			padding: 20px 20px;
+		}
+	}
+
+	&__title{
+		font-size: 40px;
+		line-height: 1.1;
+		font-weight: bold;
+		text-align: center;
+		margin-bottom: 10px;
+		@include res(l){
+			font-size: 34px;
+		}
+		@include res(s){
+			font-size: 28px;
+		}
+	}
+
+	.stars{
+		justify-content: center;
+		margin-bottom: 30px;
+		@include res(s){
+			margin-bottom: 20px;
+		}
+	}
+
+	&__type{
+		text-align: center;
+		margin-bottom: 40px;
+		@include res(s){
+			margin-bottom: 30px;
+		}
+	}
+
+	&__descr{
+		margin-bottom: 40px;
+		@include res(s){
+			margin-bottom: 30px;
+		}
+	}
+
+	&__param{
+		margin-bottom: 35px;
+		display: flex;
+		@include res(s){
+			margin-bottom: 25px;
+		}
+
+		span{
+			display: block;
+			flex-shrink: 0;
+			color: #999999;
+			width: 110px;
+		}
+
+		&:last-of-type{
+			margin-bottom: 0;
+		}
+	}
 }
 
 .fancybox-slide--current {
@@ -18,6 +105,20 @@
 	}
 }
 
-.fancybox-bg{
-	background: #8c8e9a;
+.fancybox-is-open .fancybox-bg{
+	background: $violet;
+	opacity: 0.9;
+}
+
+.fancybox-close-small{
+	&:focus:after{
+		outline: none;
+	}
+	&:hover:after{
+		background: $violet;
+		color: #FFF;
+	}
+	&:after{
+		line-height: 31px;
+	}
 }
